<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/imgView"
        android:layout_width="350dp"
        android:layout_height="@dimen/img_height"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.03"
        tools:srcCompat="@drawable/img" />

    <Button
        android:id="@+id/btnGetImg"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/getRandomBtn"
        android:textSize="@dimen/textSize"
        app:layout_constraintEnd_toEndOf="@+id/imgView"
        app:layout_constraintHorizontal_bias="0.481"
        app:layout_constraintStart_toStartOf="@+id/imgView"
        app:layout_constraintTop_toBottomOf="@+id/imgView" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="0dp"
        android:layout_height="200dp"
        android:checkedButton="@id/rBHouse"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/btnGetImg"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/btnGetImg"
        app:layout_constraintTop_toBottomOf="@+id/btnGetImg"
        app:layout_constraintVertical_bias="0.039">

        <RadioButton
            android:id="@+id/rBHouse"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/house" />

        <RadioButton
            android:id="@+id/rBLaptop"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/laptop" />

        <RadioButton
            android:id="@+id/rBWoman"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/woman" />

        <RadioButton
            android:id="@+id/rBMan"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Man" />
    </RadioGroup>

</androidx.constraintlayout.widget.ConstraintLayout>